<resources>
    <string name="app_name">We Eat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="action_search">search</string>
    <string name="actionbar_name">邮</string>
    <string name="drawer_home">首页</string>
    <string name="drawer_search">搜索</string>
    <string name="search_hint">搜索</string>
    <string name="drawer_square">广场</string>
    <string name="drawer_person">个人</string>
    <string name="drawer_heath">健康</string>
    <string name="random_food_name">宫保鸡丁</string>
    <string name="dianzan_people_num">220点赞</string>
    <string name="food_name_label">菜名 ：</string>
    <string name="food_flavor">口味 ：</string>
    <string name="sweet">甜</string>
    <string name="food_loaction">位置 ：</string>
    <string name="food_loction_canteen">新食堂一楼闽南风味</string>
    <string name="newpro_food_location1">新食堂二楼山西面</string>
    <string name="newpro_food_location2">新食堂一楼湖南风味</string>
    <string name="newpro_food_name1">黑椒牛肉盖</string>
    <string name="newpro_food_name2">干拌面</string>
    <string name="newpro_fooddetail_price">8元</string>
    <string name="newpro_fooddetail_flavor">口味 ：</string>
    <string name="newpro_fooddetail_flavorkind">辣</string>
    <string name="newpro_fooddetail_window">窗口 ：</string>
    <string name="newpro_fooddetail_windowdetail">酸辣粉</string>
    <string name="comment_label">评价 ：</string>
    <string name="newpro_fooddetail_commit">我 要 评 价</string>
    <string name="newpro_total_commit">总 体 评 价 :</string>
    <string name="recommend">力荐</string>
    <string name="general">一般</string>
    <string name="bad">吐槽</string>
    <string name="commit_hint">请输入你的评价</string>
    <string name="take_picture_hint">拍照上传</string>
    <string name="select_picture_hint">选择照片</string>
    <string name="user_image">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="push_message">是否接收推送消息</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="clear_picture_cache">清除图片缓存</string>
    <string name="create_post_num">发帖数</string>

    <string name="cancellation">注 销</string>
    <string name="food">菜 品</string>
    <string name="shuixingge">水星哥</string>
    <string name="user_commit_date">2015-06-03</string>
    <string name="figure">100</string>
    <string name="user_login_mail">邮箱</string>
    <string name="user_login_name">用户名</string>
    <string name="user_login_password">密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="logout">注销</string>
    <string name="already_logout">注销</string>
    <string name="back_login">返回登陆</string>
    <string name="find_lost_password">找回密码</string>
    <string name="immediately_login">立即登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="SignUp_success">注册成功</string>
    <string name="new_post">发帖</string>
    <string name="comment">评价</string>
    <string name="send">发送</string>
    <string name="done">✓</string>
    <string name="food_comment_hint">说点什么吧</string>
    <string name="upload_image_success">图片上传成功</string>
    <string name="upload_image_fail">图片上传失败</string>
    <string name="upload_post_success">帖子上传成功</string>
    <string name="upload_post_fail">帖子上传失败</string>
    <string name="no_empty_content">内容不能为空</string>
    <string name="please_login_first">请先登录</string>
    <string name="load_more_comments">加载更多评论</string>
    <string name="no_more_comments">暂无更多评论</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="zan_success">点赞成功</string>
    <string name="zan_fail">点赞成功</string>
    <string name="cancel_zan_success">取消点赞成功</string>
    <string name="cancel_zan_fail">取消点赞失败</string>
    <string name="no_empty_comment">评论内容不能为空</string>
    <string name="comment_success">评论发表成功</string>
    <string name="comment_fail">评论发表失败，请检查网络</string>
    <string name="wait_share">等待分享</string>
    <string name="user_new_post">我要发帖</string>
    <string name="connect_internet_fail">连接网络失败，请检查网络情况</string>
    <string name="about_app_content">第一个独立开发的App，微信公众号WeEat之 Android App版</string>
    <string name="yuan">元</string>
    <string name="one_more_press_exit">再按一次退出</string>
    <string name="no_new_post">无新帖子</string>
    <string name="no_more_post">无更多的帖子</string>
    <string name="create_picture_fail">创建照片失败</string>
    <string name="query_fail">查询失败,请检查网络</string>
    <string name="query_success">查询成功</string>
    <string name="load_comment_success">成功加载评论</string>
    <string name="skip">跳过</string>
    <string name="drawer_close">关闭导航</string>
    <string name="drawer_open">打开导航</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="personal_select">人性化自由选择</string>
    <string name="wifi_auto_offline">WIFI 下自动离线</string>
    <string name="no_load_image_under_2G_3G">2G/3G 网络不下载图片</string>
    <string name="start_to_save_traffic">开启后节省流量</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="what_is_this">这是什么</string>
    <string name="thanks">感谢有你</string>
    <string name="author">作者:shuixingge</string>
    <string name="change_theme">切换主题</string>
    <string name="allow_receive_push_message">是否接收推送消息</string>
    <string name="change_theme_tips">适合躲在被窝里看！</string>
    <string name="settings">设置</string>
    <string name="ImageView_Description">contentDescription</string>
    <string name="post_title">记一次android登陆页面的实现</string>
    <string name="post_content">记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现</string>
    <string name="post_creator_name">只是想改变</string>
    <string name="like_num">123 likes</string>
    <string name="post_create_time">2014.6.28</string>
    <string name="check_net">网络连接不可用，请检查您的网络</string>
    <string name="birthplace">诞生地：</string>
    <string name="beijing">北京</string>
    <string name="contact">联系：</string>
    <string name="contact_mail">13121558468@163.com</string>
    <string name="github_address">GitHub地址：</string>
    <string name="express_github">https://github.com/shuixingge/Express</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="title_activity_test">TestActivity</string>
     <string name="about_msg">此应用是基于MD的支持库实现的，是针对此支持库的一个小Demo，其中的api来源于豆瓣(首页的电影部分由于时间原因还未完成)，开发测试机为华为荣耀6，Android版本5.1。
    \n\n 作者:shuixingge
    \n\n 简书主页 http://www.jianshu.com/users/6725c8e8194f
    \n\n GitHub主页 https://github.com/shuixingge
   </string>
</resources>