<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/person_image_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/person_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_image"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/person_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/hello_world" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/person_nick_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/person_nick_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/user_name"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/person_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/app_name" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/person_gender_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/person_gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/user_gender"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/person_gender_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/person_gender_tv"
            android:checked="true"
            android:switchMinWidth="16dp"
            android:textOff="@string/girl"
            android:textOn="@string/boy" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/allow_push_message_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/allow_push_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/push_message"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/allow_push_message_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/allow_push_message_tv"
            android:checked="true"
            android:switchMinWidth="16dp"
            android:textOff="@string/yes"
            android:textOn="@string/no" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/clear_cache_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/clear_cache_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/clear_picture_cache"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/clear_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/app_name" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/light_gray" />

    <Button
        android:id="@+id/logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/cancellation"
        android:textColor="@color/light_gray" />
</LinearLayout>
