<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/float_label_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login_mail" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
       >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:padding="4dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:padding="4dp"
            android:text="@string/back_login"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <TextView
            android:id="@+id/find_lost_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:text="@string/find_lost_password"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <com.bupt.weeat.view.customView.MaterialLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:duration="200"
        app:alpha="200"
        app:scale="1.2"
        app:color="#FFD306">

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:background="@color/colorPrimary"
            android:enabled="true"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </com.bupt.weeat.view.customView.MaterialLayout>


    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="invisible" />
</LinearLayout>
