<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:elevation="5dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/heath_item_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/ic_heat_statistics" />

        <TextView
            android:id="@+id/heath_item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/drawer_heath" />

        <ImageView
            android:id="@+id/heath_item_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ImageView_Description"
            android:layout_marginEnd="20dp"
            android:src="@drawable/select_detail" />
    </RelativeLayout>
</android.support.v7.widget.CardView>