<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/random_food_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/loading_placeholer"
            android:background="@drawable/random_food_background"
            android:contentDescription="@string/hello_world" />

        <View
            android:id="@+id/anim_love_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_like_circle"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/anim_love_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_heart_outline_white"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/food_detail_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/recommendation_dish_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="@string/food_name_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recommendation_dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/recommendation_dish_name_label"
                android:text="@string/random_food_name"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/recommendation_dish_praise_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="50dp"
                android:src="@drawable/food_image_zan" />

            <TextView
                android:id="@+id/recommendation_dish_praise_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="1000"
                android:textColor="@color/light_grey" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/food_flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="@string/food_flavor"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recommendation_dish_tastes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/food_flavor"
                android:background="@color/colorPrimary"
                android:text="@string/sweet"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/recommendation_dish_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="@string/food_loaction"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recommendation_dish_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/recommendation_dish_location_label"
                android:text="@string/food_loction_canteen"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>