<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/week_dish_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/app_name"
            android:textColor="@color/light_grey"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/week_dish_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/loading_placeholer"/>

            <TextView
                android:id="@+id/week_dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/week_dish_image"
                android:text="@string/food"
                android:textColor="@color/light_grey" />

            <LinearLayout
                android:id="@+id/praiseNumLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="60dp">

                <ImageView
                    android:id="@+id/week_dish_praise_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/food_image_zan" />

                <TextView
                    android:id="@+id/week_dish_praise_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/figure"
                    android:textColor="@color/light_grey" />
            </LinearLayout>

            <ImageView
                android:id="@+id/select_dish_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/select_detail" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>